--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,40 @@
-h1 {
-    color: rebeccapurple;
-    font-size: 50px;
+.container{
+    width: 950px;
+    background-color: silver;
+    padding: 10px;
+}
+.top-nav {
+    height: 150px;
+    background-color: green;
+    margin: 15px;
+    margin-top: 20px;
+}
+.side-nav {
+    height: 300px;
+    width: 200px;
+    background-color: blue;
+    margin-left: 15px;
+    display: inline-block;
+    
+}
+.main {
+    height: 400px;
+    width: 700px;
+    background-color: red;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 10px;
+}
+.sub-content {
+    height: 200px;
+    width: 210px;
+    background-color: yellow;
+    display: inline-block;
+    margin: 10px;
+}
+#advertisement {
+    height: 120px;
+    width: 660px;
+    background-color: purple;
+    margin: 15px;
 }
