--- a/JS/evento-on-click/style.css
+++ b/JS/evento-on-click/style.css
@@ -76,3 +76,12 @@ main{
 span{
     font-style: oblique;
 }
+
+.col-2 button{
+    background-color: #93c47d;
+    border: 3px solid black;
+    box-shadow: 3px 3px black;
+    width: 150px;
+    height: 28px;
+    margin: 10px;
+}
