background color, terminada y validada

--- a/JS/me-gusta2/style.css
+++ b/JS/me-gusta2/style.css
@@ -17,7 +17,7 @@ nav{
 main {
     width: 1000px;
     margin: 0 auto;
-    background-color: rgb(246, 246, 182);
+    background-color: lightgoldenrodyellow;
 }
 
 main h2{
