--- a/CSS/perfil/style.css
+++ b/CSS/perfil/style.css
@@ -11,7 +11,7 @@ header{
     background-color: #000000;
     display: flex;
     justify-content: space-between;
-    padding: 0px 250px;
+    padding: 0px 15%;
     color: #e1e1e1;
     align-items: center;
     margin-bottom: 10px;
@@ -22,7 +22,6 @@ nav{
     display: flex;
     margin: 0 auto;
     width: fit-content;
-    
 }
 
 .links{
@@ -108,12 +107,14 @@ h3{
     color: #e6e6e6;
 }
 
-.header-block span{
+.header-block p{
     background-color: #cccccc;
     border-radius: 50px;
     padding: 0px 6px;
     margin: 3px 6px;
     color: #131313;
+    width: min-content;
+    display: inline-block;
 }
 
 .friends{
