--- a/JS/tiempoDojo/style.css
+++ b/JS/tiempoDojo/style.css
@@ -83,22 +83,24 @@ main{
     font-weight: 900;
 }
 
-footer{
+.window{
     border: 3px solid black;
     display: flex;
     text-align: start;
     align-items: center;
-    width:100%;
+    width:70%;
     background-color: #eeeeee;
+    position: fixed;
+    bottom: 10px;
 }
 
-footer img{
+.window img{
     width: 80px;
     margin: 2%;
     height: 80px;
 }
 
-footer button{
+.window button{
     background-color: #9dc3f5;
     border: 3px solid black;
     box-shadow: 3px 3px black;
